samples/_failures_safe/1761320436_6f9696_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b5e9e15c.c: In function ‘main’:
./samples/SAFE/__tmp_b5e9e15c.c:143:16: error: missing terminating " character
  143 |         printf("4. Transpose matrix 2\n
      |                ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b5e9e15c.c:143:9: error: expected expression at end of input
  143 |         printf("4. Transpose matrix 2\n
      |         ^~~~~~
./samples/SAFE/__tmp_b5e9e15c.c:143:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b5e9e15c.c:143:9: error: expected declaration or statement at end of input
